Fix for http://jira.icefaces.org/browse/ICE-1964 (scrollable datatable columns do not align when cell content length exceeds column length)

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
@@ -298,6 +298,16 @@
 .iceDatTblHdr{} /*was iceTblHeader */
 .iceDatTblFtr{} /*was iceTblFooter */
 
+/*
+----- for datatable when cell content length exceeds-----
+*/
+.iceDatTbl td span.iceOutTxt{
+	color:#000000;
+	font-family:Arial,Helvetica,sans-serif;
+	padding:2px 0px;
+	overflow: hidden;
+	display: block;
+}
 /* etc */
 
 /*
